--- a/src/main/resources/templates/authorization.html
+++ b/src/main/resources/templates/authorization.html
@@ -11,6 +11,7 @@
         <p th:text="${el.getSurname()}"></p>
         <p th:text="${el.getMail()}"></p>
         <p th:text="${el.getRole()}"></p>
+        <p th:text="${el.getPassword()}"></p>
     </h3>
 </div>
 </body>
