--- a/src/main/resources/templates/hello.html
+++ b/src/main/resources/templates/hello.html
@@ -6,5 +6,10 @@
 </head>
 <body>
 <p th:text="'Hello, ' + ${name} + '!'" />
+<div>
+    <form th:action="@{/logout}" method="post">
+        <input type="submit" value="Sign Out"/>
+    </form>
+</div>
 </body>
 </html>
