added email authorization

--- a/src/main/resources/templates/authorization.html
+++ b/src/main/resources/templates/authorization.html
@@ -17,7 +17,7 @@
 </div>
 <div th:each="el : ${data}">
     <h3>
-        <p th:text="${el.getName()}"></p>
+        <p th:text="${el.getUsername()}"></p>
         <p th:text="${el.getSurname()}"></p>
         <p th:text="${el.getMail()}"></p>
         <p th:text="${el.getRole()}"></p>
