--- a/src/main/resources/templates/registration.html
+++ b/src/main/resources/templates/registration.html
@@ -9,7 +9,7 @@
     <form  method="post">
         <input type="text" name="name" placeholder="Введите логин"/>
         <input type="text" name="surname" placeholder="Введите фамилию"/>
-        <input type="email" name="email" placeholder="Введите почту"/>
+        <input type="text" name="mail" placeholder="Введите почту"/>
         <input type="text" name="password" placeholder="Введите пароль"/>
         <button type="submit">добавить</button>
     </form>
