--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -6,20 +6,20 @@
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <link rel="stylesheet" href="css/style.css">
+      <link th:href="@{/style.css}" rel="stylesheet" />
     <link rel="stylesheet" href="css/font-awesome.css" >
     <link href="https://fonts.googleapis.com/css?family=Cuprum" rel="stylesheet">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
-    <link rel="icon" href="img/logo.png">
+    <link rel="icon" href="logo.png">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
     <title>HAMMER</title>
   </head>
-  <body style="background: url(img/bg-body.jpg);"> 
+  <body style="background: url(bg-body.jpg);">
     <div id="index"></div>
      <nav class="navbar navbar-expand-lg navbar-light" style="border-bottom: 1px solid #E1E1E1;">
     <div class="container">
      <a href="index.html" class="navbar-brand" >
-        <img src="img/logo.png" width="120px" height="120px" alt="logo">
+        <img src="logo.png" width="120px" height="120px" alt="logo">
       </a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expended="false" aria-label="Toggle navigation">
          <span class="navbar-toggler-icon"></span>
@@ -27,16 +27,16 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav mr-auto nav-icon">
         <li class="nav-item active">
-          <a href="index.html" class="nav-link "><i class="fa fa-home"></i>Главная</a>
+          <a href="index" class="nav-link "><i class="fa fa-home"></i>Главная</a>
         </li>
         <li class="nav-item dropdown">
           <a href="#" class="nav-link dropdown-toggle" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><i class="fa fa-info"></i>Категории</a>  
           <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-            <a class="dropdown-item" href="antikiick.html">Антиквариат и искусство</a>
-            <a class="dropdown-item" href="vintag.html">Винтаж</a>
-            <a class="dropdown-item" href="collec.html">Коллекционное</a>
-            <a class="dropdown-item" href="sdelsruk.html">Сделанное своими руками</a>
-            <a class="dropdown-item" href="dragiukr.html">Драгоценности и украшения</a>
+            <a class="dropdown-item" href="/antikiick">Антиквариат и искусство</a>
+            <a class="dropdown-item" href="/vintag">Винтаж</a>
+            <a class="dropdown-item" href="/collec">Коллекционное</a>
+            <a class="dropdown-item" href="/sdelsruk">Сделанное своими руками</a>
+            <a class="dropdown-item" href="/dragiukr">Драгоценности и украшения</a>
         </div> 
         </li>
         <li class="nav-item">
