--- a/src/main/resources/templates/privateOffice.html
+++ b/src/main/resources/templates/privateOffice.html
@@ -1,10 +1,17 @@
-<!DOCTYPE html>
-<html lang="en">
+<!DOCTYPE HTML>
+<html xmlns:th="http://www.thymeleaf.org">
 <head>
-    <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Getting Started: Serving Web Content</title>
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 </head>
 <body>
-
+<div th:each="el : ${data}">
+    <h3>
+        <p th:text="${el.getUsername()}"></p>
+        <p th:text="${el.getSurname()}"></p>
+        <p th:text="${el.getMail()}"></p>
+        <p th:text="${el.getRole()}"></p>
+    </h3>
+</div>
 </body>
 </html>
