--- a/src/main/resources/templates/vintag.html
+++ b/src/main/resources/templates/vintag.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="css/font-awesome.css" >
     <link href="https://fonts.googleapis.com/css?family=Cuprum" rel="stylesheet">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
-    <link rel="icon" href="img/logo.png">
+    <link rel="icon" href="logo.png">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
     <title>HAMMER</title>
   </head>
