--- a/src/main/resources/templates/dragiukr.html
+++ b/src/main/resources/templates/dragiukr.html
@@ -169,7 +169,16 @@
       </div>  
   </div>
 </div>
-    
+    <div>
+        <div th:each="el : ${lot}">
+            <h3>
+                <p th:text="${el.getUsername()}"></p>
+                <p th:text="${el.getSurname()}"></p>
+                <p th:text="${el.getMail()}"></p>
+                <p th:text="${el.getRole()}"></p>
+            </h3>
+        </div>
+    </div>
    
         
     <!-- Optional JavaScript -->
