--- a/src/main/resources/templates/antikiick.html
+++ b/src/main/resources/templates/antikiick.html
@@ -169,7 +169,7 @@
       </div>  
   </div>
 </div>
-  
+</div>
 
 
     <!-- Optional JavaScript -->
@@ -181,4 +181,16 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
     <script src="js/main.js"></script>
     <script src="js/script2.js"></script>
+  </div>
+    <div th:each="el : ${lot}">
+        <h3>
+            <p th:text="${el.getProduct()}"></p>
+            <p th:text="${el.getSeller()}"></p>
+            <p th:text="${el.getDescription()}"></p>
+            <p th:text="${el.getCategory()}"></p>
+            <p th:text="${el.getCoast()}"></p>
+            <P>Вывод</P>
+        </h3>
+    </div>
   </body>
+</html>
