--- a/src/main/resources/templates/registr.html
+++ b/src/main/resources/templates/registr.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html xmlns:th="http://www.thymeleaf.org">
 
 <head>
   <meta charset="utf-8">
@@ -8,22 +8,22 @@
   <!-- Bootstrap CSS -->
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
     integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="style.css">
   <link rel="stylesheet" href="css/font-awesome.css">
   <link href="https://fonts.googleapis.com/css?family=Cuprum" rel="stylesheet">
   <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
-  <link rel="icon" href="img/logo.png">
+  <link rel="icon" href="logo.png">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
     integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
   <title>HAMMER</title>
 </head>
 
-<body style="background: url(img/bg-body.jpg);">
+<body style="background: url(bg-body.jpg);">
   <div id="index"></div>
   <nav class="navbar navbar-expand-lg navbar-light" style="border-bottom: 1px solid #E1E1E1;">
     <div class="container">
-      <a href="index.html" class="navbar-brand">
-        <img src="img/logo.png" width="120px" height="120px" alt="logo">
+      <a href="index" class="navbar-brand">
+        <img src="logo.png" width="120px" height="120px" alt="logo">
       </a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
         aria-controls="navbarSupportedContent" aria-expended="false" aria-label="Toggle navigation">
@@ -32,21 +32,21 @@
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav mr-auto nav-icon">
           <li class="nav-item active">
-            <a href="index.html" class="nav-link "><i class="fa fa-home"></i>Главная</a>
+            <a href="index" class="nav-link "><i class="fa fa-home"></i>Главная</a>
           </li>
           <li class="nav-item dropdown">
             <a href="#" class="nav-link dropdown-toggle" id="navbarDropdown" role="button" data-toggle="dropdown"
               aria-haspopup="true" aria-expanded="false"><i class="fa fa-info"></i>Категории</a>
             <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-              <a class="dropdown-item" href="antikiick.html">Антиквариат и искусство</a>
-              <a class="dropdown-item" href="vintag.html">Винтаж</a>
-              <a class="dropdown-item" href="collec.html">Коллекционное</a>
-              <a class="dropdown-item" href="sdelsruk.html">Сделанное своими руками</a>
-              <a class="dropdown-item" href="dragiukr.html">Драгоценности и украшения</a>
+              <a class="dropdown-item" href="/antikiick">Антиквариат и искусство</a>
+              <a class="dropdown-item" href="/vintag">Винтаж</a>
+              <a class="dropdown-item" href="/collec">Коллекционное</a>
+              <a class="dropdown-item" href="/sdelsruk">Сделанное своими руками</a>
+              <a class="dropdown-item" href="/dragiukr.">Драгоценности и украшения</a>
             </div>
           </li>
           <li class="nav-item active">
-            <a href="vhod.html" class="nav-link "><i class="fa fa-home"></i>Вход/Регистрация</a>
+            <a href="vhod" class="nav-link "><i class="fa fa-home"></i>Вход/Регистрация</a>
           </li>
         </ul>
         <form class="form-inline my-2 my-lg-0">
@@ -60,36 +60,28 @@
   </nav>
 
 
-  <form action="action_page.php">
     <div class="contain" style="width: 25%">
       <h1>Регистрация</h1>
       <hr>
 
-      <label for="email"><b>Введите имя</b></label>
-      <input type="text" placeholder="Имя" name="name" required>
-
-      <label for="psw"><b>Введите фамилию</b></label>
-      <input type="text" placeholder="Фамилия" name="surname" required>
-
-      <label for="psw"><b>E-mail</b></label>
-      <input type="text" placeholder="Введите e-mail" name="email" required>
-
-      <label for="psw"><b>Пароль</b></label>
-      <input type="password" placeholder="Введите пароль" name="psw" required>
-
-      <label for="psw"><b>Подтвердите пароль</b></label>
-      <input type="password" placeholder="Введите пароль" name="psw1" required>
+      <form  method="post">
+        <input type="text" name="name" class ="input" placeholder="Введите логин"/>
+        <input type="text" name="surname" class ="input" placeholder="Введите фамилию"/>
+        <input type="text" name="mail" class ="input" placeholder="Введите почту"/>
+        <input type="text" name="password" class ="input" id="password" placeholder="Введите пароль"/>
+        <button type="submit" id="registration" class="button">Зарегистрироваться</button>
+      </form>
 
       <hr>
-      <button type="submit" class="vhodbtn">Зарегистрироваться</button>
     </div>
-  </form>
-
-
+<div >
+  <p th:text="${message}" class="message"></p>
+</div>
 
   <!-- Optional JavaScript -->
   <!-- jQuery first, then Popper.js, then Bootstrap JS -->
   <script src="js/script2.js"></script>
+  <script src="JS.js"></script>
   <script src="js/jquery-3.4.1.min.js"></script>
   <script src="https://kit.fontawesome.com/f54fd41071.js" crossorigin="anonymous"></script>
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
