--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -22,8 +22,8 @@
   <div id="index"></div>
   <nav class="navbar navbar-expand-lg navbar-light" style="border-bottom: 1px solid #E1E1E1;">
     <div class="container">
-      <a href="index.html" class="navbar-brand">
-        <img src="img/logo.png" width="120px" height="120px" alt="logo">
+      <a href="index" class="navbar-brand">
+        <img src="logo.png" width="120px" height="120px" alt="logo">
       </a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
         aria-controls="navbarSupportedContent" aria-expended="false" aria-label="Toggle navigation">
@@ -46,7 +46,7 @@
             </div>
           </li>
           <li class="nav-item active">
-            <a href="vhod.html" class="nav-link "><i class="fa fa-home"></i>Вход/Регистрация</a>
+            <a href="login" class="nav-link "><i class="fa fa-home"></i>Вход/Регистрация</a>
           </li>
         </ul>
         <form class="form-inline my-2 my-lg-0">
