--- a/src/main/resources/templates/lk.html
+++ b/src/main/resources/templates/lk.html
@@ -22,7 +22,7 @@
   <div id="index"></div>
   <nav class="navbar navbar-expand-lg navbar-light" style="border-bottom: 1px solid #E1E1E1;">
     <div class="container">
-      <a href="index.html" class="navbar-brand">
+      <a href="index" class="navbar-brand">
         <img src="logo.png" width="120px" height="120px" alt="logo">
       </a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
