--- a/src/main/resources/templates/antikiick.html
+++ b/src/main/resources/templates/antikiick.html
@@ -7,10 +7,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no, initial-scale=1">
 
   <!-- Bootstrap CSS -->
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+  <link rel="stylesheet" href="bootstrap.min.css"
     integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
   <link rel="stylesheet" href="style.css">
-  <link rel="stylesheet" href="css/font-awesome.css">
+  <link rel="stylesheet" href="font-awesome.css">
   <link href="https://fonts.googleapis.com/css?family=Cuprum" rel="stylesheet">
   <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
   <link rel="icon" href="logo.png">
@@ -47,7 +47,10 @@
             </div>
           </li>
           <li class="nav-item active">
-            <a href="vhod" class="nav-link "><i class="fa fa-home"></i>Вход/Регистрация</a>
+            <a href="lk" class="nav-link "><i class="fa fa-home"></i>личный кабинет</a>
+          </li>
+          <li class="nav-item active">
+            <a href="login" class="nav-link "><i class="fa fa-home"></i>Вход/Регистрация</a>
           </li>
         </ul>
         <form class="form-inline my-2 my-lg-0">
