--- a/src/main/resources/templates/dragiukr.html
+++ b/src/main/resources/templates/dragiukr.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html xmlns:th="http://www.thymeleaf.org">
 
 <head>
   <!-- Required meta tags -->
@@ -7,10 +7,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no, initial-scale=1">
 
   <!-- Bootstrap CSS -->
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+  <link rel="stylesheet" href="bootstrap.min.css"
     integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
   <link rel="stylesheet" href="style.css">
-  <link rel="stylesheet" href="css/font-awesome.css">
+  <link rel="stylesheet" href="font-awesome.css">
   <link href="https://fonts.googleapis.com/css?family=Cuprum" rel="stylesheet">
   <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
   <link rel="icon" href="logo.png">
@@ -23,7 +23,7 @@
   <div id="index"></div>
   <nav class="navbar navbar-expand-lg navbar-light" style="border-bottom: 1px solid #E1E1E1;">
     <div class="container">
-      <a href="index.html" class="navbar-brand">
+      <a href="index" class="navbar-brand">
         <img src="img/logo.png" width="120px" height="120px" alt="logo">
       </a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
@@ -33,7 +33,7 @@
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav mr-auto nav-icon">
           <li class="nav-item">
-            <a href="index.html" class="nav-link "><i class="fa fa-home"></i>Главная</a>
+            <a href="index" class="nav-link "><i class="fa fa-home"></i>Главная</a>
           </li>
           <li class="nav-item dropdown active">
             <a href="#" class="nav-link dropdown-toggle" id="navbarDropdown" role="button" data-toggle="dropdown"
@@ -47,7 +47,10 @@
             </div>
           </li>
           <li class="nav-item active">
-            <a href="vhod.html" class="nav-link "><i class="fa fa-home"></i>Вход/Регистрация</a>
+            <a href="lk" class="nav-link "><i class="fa fa-home"></i>личный кабинет</a>
+          </li>
+          <li class="nav-item active">
+            <a href="login" class="nav-link "><i class="fa fa-home"></i>Вход/Регистрация</a>
           </li>
         </ul>
         <form class="form-inline my-2 my-lg-0">
