--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
-<html lang="en">
+<html xmlns:th="http://www.thymeleaf.org">
 
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no, initial-scale=1">
 
   <!-- Bootstrap CSS -->
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+  <link rel="stylesheet" href="bootstrap.min.css"
     integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
   <link rel="stylesheet" href="style.css">
-  <link rel="stylesheet" href="css/font-awesome.css">
+  <link rel="stylesheet" href="font-awesome.css">
   <link href="https://fonts.googleapis.com/css?family=Cuprum" rel="stylesheet">
   <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
   <link rel="icon" href="logo.png">
@@ -32,7 +32,7 @@
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav mr-auto nav-icon">
           <li class="nav-item active">
-            <a href="index.html" class="nav-link "><i class="fa fa-home"></i>Главная</a>
+            <a href="index" class="nav-link "><i class="fa fa-home"></i>Главная</a>
           </li>
           <li class="nav-item dropdown">
             <a href="#" class="nav-link dropdown-toggle" id="navbarDropdown" role="button" data-toggle="dropdown"
@@ -44,6 +44,9 @@
               <a class="dropdown-item" href="/sdelsruk">Сделанное своими руками</a>
               <a class="dropdown-item" href="/dragiukr">Драгоценности и украшения</a>
             </div>
+          </li>
+          <li class="nav-item active">
+            <a href="lk" class="nav-link "><i class="fa fa-home"></i>личный кабинет</a>
           </li>
           <li class="nav-item active">
             <a href="login" class="nav-link "><i class="fa fa-home"></i>Вход/Регистрация</a>
