--- a/src/main/resources/templates/collec.html
+++ b/src/main/resources/templates/collec.html
@@ -51,6 +51,9 @@
           <a href="login" class="nav-link "><i class="fa fa-home"></i><p th:text="#{label.signin}"></p></a>
         </li>
         <li class="nav-item active">
+          <a href="lk" class="nav-link "><i class="fa fa-home"></i><p th:text="#{label.lk}"></p></a>
+        </li>
+        <li class="nav-item active">
           <a th:href="@{?locale=ru}" class="nav-link "><i class="fa fa-home"></i>ru</a>
         </li>
         <li>
@@ -69,7 +72,7 @@
   <div class="container-fluid"
     style="background: url(bg-header2.gif) repeat-x; padding-bottom: 7px; padding-top: 30px; background-size: cover;">
     <div class="container">
-      <h1 style="color: #fff; font-size: 50px;" th:text="#{label.collection}></h1>
+      <h1 style="color: #fff; font-size: 50px;" th:text="#{label.collection}"></h1>
     </div>
   </div>
 
