--- a/src/main/resources/templates/lk.html
+++ b/src/main/resources/templates/lk.html
@@ -120,10 +120,9 @@
     <div class="container text-center justify-content-center" style="border-radius: 15px; background-color: white;">
       <div class="collapse multi-collapse" id="multiCollapseExample1">
         <div class="card card-body" style="border: 1px solid white;">
-<<<<<<< HEAD
           <p style="margin-bottom: 35px;">Мои лоты</p>
 			<div class = "table" id="test_database"></div>        
-=======
+
           <p style="margin-bottom: 35px;">Мои лоты</p>
 			<div class = "table" id="test_database"></div>
           <div th:each="el : ${lots}">
@@ -136,7 +135,6 @@
        <img th:src="'/Img/'+${el.getPhoto()}+.jpg">
     </h3>
 		</div>
->>>>>>> branch 'Test' of https://github.com/NikitaDr-ON/Auction.git
         </div>
       </div>
     </div>
@@ -217,8 +215,10 @@
           </div>
         </div>
       </div>
+  <h3>
+    <p th:text="${lot}"></p>
 
-
+  </h3>
       <!-- Optional JavaScript -->
       <!-- jQuery first, then Popper.js, then Bootstrap JS -->
       <script src="js/script2.js"></script>
