--- a/src/main/resources/templates/lk.html
+++ b/src/main/resources/templates/lk.html
@@ -206,7 +206,8 @@
           </div>
         </div>
       </div>
-
+<p>Избранное</p>
+<div id="show_user"></div>
 
       <div class="container-fluid" style="margin: 30px auto 50px auto;">
         <div class="container text-center justify-content-center" style="border-radius: 15px; background-color: white;">
@@ -217,10 +218,6 @@
           </div>
         </div>
       </div>
-  <h3>
-    <p th:text="${lot}"></p>
-
-  </h3>
       <!-- Optional JavaScript -->
       <!-- jQuery first, then Popper.js, then Bootstrap JS -->
       <script src="js/script2.js"></script>
