--- a/src/main/resources/templates/collec.html
+++ b/src/main/resources/templates/collec.html
@@ -78,8 +78,7 @@
     </div>
   </div>
 
-<div class = "table" id="test_database_collectable">
-</div>
+<div class = "cards" id="collec"></div>
 
 
   <!-- Optional JavaScript -->
