--- a/src/main/resources/templates/dragiukr.html
+++ b/src/main/resources/templates/dragiukr.html
@@ -77,8 +77,8 @@
       <h1 style="color: #fff; font-size: 50px;" th:text="#{label.drag}"></h1>
     </div>
   </div>
-<div class = "table" id="test_database_jewelry">
-</div>
+<div class="cards" id = "drag"></div>
+
 
 
   <!-- Optional JavaScript -->
