--- a/src/main/resources/templates/sdelsruk.html
+++ b/src/main/resources/templates/sdelsruk.html
@@ -77,9 +77,8 @@
       <h1 style="color: #fff; font-size: 50px;" th:text="#{label.handmade}"></h1>
     </div>
   </div>
+<div class="cards" id = "handmade"></div>
 
-<div class = "table" id="test_database_handmade">
-</div>
 
 
   <!-- Optional JavaScript -->
