--- a/src/main/resources/templates/vintag.html
+++ b/src/main/resources/templates/vintag.html
@@ -89,8 +89,8 @@
     </div>
   </div>
 
-<div class = "table" id="test_database_vintage">
-</div>
+<div class="cards" id = "vintag"></div>
+
 
   <!-- Optional JavaScript -->
   <!-- jQuery first, then Popper.js, then Bootstrap JS -->
