--- a/src/main/resources/templates/antikiick.html
+++ b/src/main/resources/templates/antikiick.html
@@ -77,9 +77,17 @@
       <h1 style="color: #fff; font-size: 50px;" th:text="#{label.antiquesAndArt}"></h1>
     </div>
   </div>
-<div class = "table" id="test_database_antic">
-</div>
+<div class = "cards" id="antic"></div>
 
+<div class="cards" id = "test">
+  <div class="card" th:each="user : ${userList}">
+    <div style="border:2px solid #ccc;width: 300px; color:#000000">
+      <p th:text="${user.id}"></p>
+      <p th:text="${user.name}"></p>
+
+    </div>
+  </div>
+</div>
 
   <!-- Optional JavaScript -->
   <!-- jQuery first, then Popper.js, then Bootstrap JS -->
@@ -96,7 +104,7 @@
         integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
         crossorigin="anonymous"></script>
 <script src="js/main.js"></script>
-<script type="text/javascript" src="js/mainAjax.js"></script>
+<script type="text/javascript" src="/js/mainAjax.js"></script>
 </body>
 
 </html>
