--- a/src/main/resources/templates/lk.html
+++ b/src/main/resources/templates/lk.html
@@ -94,23 +94,15 @@
       <div class="row">
         <div class="col-lg-3 col-md-4 col-sm-4 text-center justify-content-center">
           <a class="personalhref" data-toggle="collapse" href="#multiCollapseExample1" role="button"
-            aria-expanded="false" aria-controls="multiCollapseExample1">Добавленные лоты</a>
+             aria-expanded="false" aria-controls="multiCollapseExample1">Корзина</a>
         </div>
         <div class="col-lg-3 col-md-4 col-sm-4 text-center justify-content-center">
           <a class="personalhref" data-toggle="collapse" href="#multiCollapseExample2" role="button"
-            aria-expanded="false" aria-controls="multiCollapseExample1">Добавить лот</a>
+             aria-expanded="false" aria-controls="multiCollapseExample1">Избранное</a>
         </div>
         <div class="col-lg-3 col-md-4 col-sm-4 text-center justify-content-center">
           <a class="personalhref" data-toggle="collapse" href="#multiCollapseExample3" role="button"
-            aria-expanded="false" aria-controls="multiCollapseExample1">"Мои ставки"</a>
-        </div>
-         <div class="col-lg-3 col-md-4 col-sm-4 text-center justify-content-center">
-          <a class="personalhref" data-toggle="collapse" href="#multiCollapseExample4" role="button"
-            aria-expanded="false" aria-controls="multiCollapseExample1">"Мои аукционы"</a>
-        </div>
-        <div class="col-lg-3 col-md-4 col-sm-4 text-center justify-content-center">
-          <a class="personalhref" data-toggle="collapse" href="#multiCollapseExample5" role="button"
-            aria-expanded="false" aria-controls="multiCollapseExample1">Избранное</a>
+             aria-expanded="false" aria-controls="multiCollapseExample1">Доставки</a>
         </div>
       </div>
     </div>
@@ -120,23 +112,32 @@
     <div class="container text-center justify-content-center" style="border-radius: 15px; background-color: white;">
       <div class="collapse multi-collapse" id="multiCollapseExample1">
         <div class="card card-body" style="border: 1px solid white;">
-          <p style="margin-bottom: 35px;">Мои лоты</p>
-			<div class = "table" id="test_database"></div>        
+          <p style="margin-bottom: 35px;">Корзина</p>
+          <div class="cont-basket" style="box-shadow: 0 15px 30px 1px grey; background: #b3d7ff;border-radius: 10px;">
+              </br>
+            <h3>Товары</h3>
+              </br>
+              <div class="cards" id = "basket_purchase"></div>
+              </br>
+          </div>
+</br>
+          <div style="box-shadow: 0 15px 30px 1px grey; background: #b3d7ff;border-radius: 10px;">
 
-          <p style="margin-bottom: 35px;">Мои лоты</p>
-			<div class = "table" id="test_database"></div>
-          <div th:each="el : ${lots}">
-   	 <h3>
-        <p th:text="${el.getId()}"></p>
-        <p th:text="${el.getStartCost()}"></p>
-        <p th:text="${el.getProduct()}"></p>
-        <p th:text="${el.getDescription()}"></p>
-       <p th:text="${el.getPhoto}"></p>
-       <img th:src="'/Img/'+${el.getPhoto()}+.jpg">
-    </h3>
+              </br>
+            <h3>Способ доставки</h3>
+            </br>
 
-		</div>
-		</div>
+            <div class="cont-service" id="cont-service"></div>
+              </br>
+
+          </div>
+          </br>
+          <div class="justify-content-center text-center">
+              <a href="/lk/buy" class="btn" id="buy" >Купить</a>
+          </div>
+          </br>
+
+        </div>
         </div>
       </div>
     </div>
@@ -145,41 +146,10 @@
       <div class="container text-center justify-content-center" style="border-radius: 15px; background-color: white;">
         <div class="collapse multi-collapse" id="multiCollapseExample2">
           <div class="card card-body" style="border: 1Fpx solid white;">
-         
-            <div style="text-align: left;">
-              <p>Введите название товара: </p>
-              <input type="text" name="product" id="product">
-            </div>
-            <div style="text-align: left;">
-              <p>Введите описание товара: </p>
-              <input type="text" name="description"id="description">
-            </div>
-            <div style="text-align: left;">
-              <p>Начальная ставка: </p>
-              <input type="number" name="startCost" id="startCost" value="0" >
-            </div>
-            <div style="text-align: left;">
-              <p>Продавец: </p>
-              <input type="number" name="seller" id="seller" >
-            </div>
-            <div style="text-align: left;">
-              <label for="photo">Файл:</label>
-              <input type="file" name="file" id="photo"/> 
-            </div>
-            <div style="text-align: left;">
-              <label for="categories">Выберите категорию товара:</label>
-              <select name="categoryId" id="categoryId"  >
-                <option value="1" selected="selected">Антиквариат и искусство</option>
-                <option value="2">Винтаж</option>
-                <option value="3">Коллекционное</option>
-                <option value="4">Сделанное своими руками</option>
-                <option value="5">Драгоценности и украшения</option>
-              </select>
-                <div class="justify-content-center text-center">
-                  <button class="btn btn-primary" onclick="addLot();">Добавить</button>
-                </div>
-              </div>
-            </div>            
+            <p style="margin-bottom: 35px;">Избранное</p>
+            <div class="cards" id = "out_fav"></div>
+
+          </div>
           </div>
         </div>
       </div>
@@ -190,34 +160,24 @@
         <div class="container text-center justify-content-center" style="border-radius: 15px; background-color: white;">
           <div class="collapse multi-collapse" id="multiCollapseExample3">
             <div class="card card-body" style="border: 1px solid white;">
-              <p style="margin-bottom: 35px;">Мои ставки</p>
+              <p style="margin-bottom: 35px;">Доставки</p>
+              <div class="cards" id = "deliv">
+                   <div class="card" th:each="user : ${userList}">
+                      <div style="border:2px solid #ccc;width: 300px; color:#000000">
+                        <p th:text="${user.delivery_id}"></p>
+                        <p th:text="${user.isSent}"></p>
+                        <p th:text="${user.date_delivery}"></p>
 
-            </div>
-          </div>
-        </div>
-      </div>
-      <div class="container-fluid" style="margin: 30px auto 50px auto;">
-        <div class="container text-center justify-content-center" style="border-radius: 15px; background-color: white;">
-          <div class="collapse multi-collapse" id="multiCollapseExample4">
-            <div class="card card-body" style="border: 1px solid white;">
-              <p style="margin-bottom: 35px;">Мои аукционы</p>
-              <div class = "table" id="list_auction"></div>
-            </div>
-          </div>
-        </div>
-      </div>
-<p>Избранное</p>
-<div id="show_user"></div>
+                      </div>
+                    </div>
+              </div>
 
-      <div class="container-fluid" style="margin: 30px auto 50px auto;">
-        <div class="container text-center justify-content-center" style="border-radius: 15px; background-color: white;">
-          <div class="collapse multi-collapse" id="multiCollapseExample5">
-            <div class="card card-body" style="border: 1px solid white;">
-              <p style="margin-bottom: 35px;">Избранное</p>
-            </div>
+
+              </div>
           </div>
         </div>
       </div>
+
       <!-- Optional JavaScript -->
       <!-- jQuery first, then Popper.js, then Bootstrap JS -->
       <script src="js/script2.js"></script>
